--- a/styles/prac_day_2.css
+++ b/styles/prac_day_2.css
@@ -18,13 +18,12 @@ li{
     height: 100px;
     border-radius: 50%;
     position: relative;
-    background: conic-gradient(
-        var(--color, #0d6efd) calc(var(--percentage, 0) * 1%),
-        #e9ecef 0
-      );
+    background: blanchedalmond;
+    margin-bottom: 20px;
+    margin-left: 70px;
 }
 .progress-circle::before {
-    content: attr(data-percentage) "%";
+    content: attr(value) "%";
     position: absolute;
     top: 50%;
     left: 50%;
@@ -55,9 +54,6 @@ li{
 .player-cloth{
     align-items: center;
     
-}
-.player-thing{
-    /* margin-right: 70px; */
 }
 .clent-discution{
     align-items: center;
