--- a/styles/prac_day_2.css
+++ b/styles/prac_day_2.css
@@ -13,7 +13,7 @@ li{
 .hr{
     border-top: 2px dashed gray;
 }
-.progress-circle{
+.circle{
     width: 100px;
     height: 100px;
     border-radius: 50%;
@@ -22,7 +22,7 @@ li{
     margin-bottom: 20px;
     margin-left: 70px;
 }
-.progress-circle::before {
+.circle::before {
     content: attr(value) "%";
     position: absolute;
     top: 50%;
